# SGCT-ConfigurationGenerator

./: CMakeLists.txt  main.cpp
src/: sgctconfig.cpp  sgctconfig.h
src/capture/: capturewidget.cpp  capturewidget.h
src/node/: fisheyewidget.cpp  fisheyewidget.h  nodewidget.cpp  nodewidget.h  planeprojectionwidget.cpp  planeprojectionwidget.h  viewplanewidget.cpp  viewplanewidget.h  windowwidget.cpp  windowwidget.h
src/scene/: scenewidget.cpp  scenewidget.h
src/settings/: osdtextwidget.cpp  osdtextwidget.h  settingswidget.cpp  settingswidget.h
src/tracker/: axeswidget.cpp  axeswidget.h  buttonswidget.cpp  buttonswidget.h  devicewidget.cpp  devicewidget.h  sensorwidget.cpp  sensorwidget.h  trackerwidget.cpp  trackerwidget.h
src/user/: individualuserwidget.cpp  individualuserwidget.h  userwidget.cpp  userwidget.h
